 ~ Combined some theory techs with their application to simplify the tech tree.
 ~ Made some techs, ship parts, ship hulls, and building types that had very large costs be officially not researchable or producible.
 ~ New Sitrep messages: 
 ~ ~ when a planet is terraformed by the Terraforming building.
 ~ ~ when a tame space monster is 'born'.
 ~ AI script updates

Graphics:
 ~ Made companion stars always visibile in in sidepanel.
 ~ Added clearer fleet icons.
 ~ Made AI empires choose more distinctive colors.
 ~ Made structure meter icon distinct from health meter icon.
 ~ Added icons for some ship parts.
 ~ Added animated system selection indicators.

GUI:
 ~ Sorted techs alphabetically in encyclopedia index.
 ~ Added a separate message for starting up AIs so any problems with that won't appear to happen during universe generation.
 ~ Hid unresearchable and unproducible items on the tech tree, production screen, and design screen.
 ~ Made map zoom with the slider smoother.
 ~ Removed separate fleet windows that opened when double-clicking a fleet in the main fleets window.
 ~ Limited messages window history to 100 lines.
 ~ Coloured fleet window icons with empires / monster colour.
 ~ Tweaked tech dependency arc positions.
 ~ Added tooltips to producible items in production screen list.
 ~ Added highlighting to show which producible items can be produced on the selected planet.
 ~ Made automatically adding parts to ship designs more flexible; parts will be moved around to accomodate the new one, if possible and necessary.
 ~ Improved in-game chat autocomplete.

Bugs:
 ~ Fixed problem with non-Latin font character rendering.
 ~ Fixed tamed monsters wandering off on their own initiative.
 ~ Fixed some crash bugs related to the Psychic Domination tech.
 ~ Fixed bug where the tech tree view reset every time a tech was added or removed from the queue.
 ~ Fixed / prevented crashes when font files are missing.
 ~ Fixed misplaced text on tech tree tech panels.