@@ -24,6 +24,7 @@ Content:
  ~ ~ when a planet is terraformed by the Terraforming building.
  ~ ~ when a tame space monster is 'born'.
  ~ AI script updates
+ ~ New default premade shipdesigns for empires.
 
 Graphics:
  ~ Made companion stars always visibile in in sidepanel.
@@ -32,6 +33,7 @@ Graphics:
  ~ Made structure meter icon distinct from health meter icon.
  ~ Added icons for some ship parts.
  ~ Added animated system selection indicators.
+ ~ Replaced ground invasion overlay graphic.
 
 GUI:
  ~ Sorted techs alphabetically in encyclopedia index.
@@ -57,8 +59,8 @@ Bugs:
  ~ Fixed a crash occurring during tech tree layout.
  ~ Fixed centring on techs on tech tree.
  ~ Fixed issue that caused AIs to do nothing on OSX.
- 
- 
+ ~ Fixed crash or graphical glitch ocurring when transferring all ships out of a moving fleet.
+
 
 v0.3.17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
